PyMaker/datas/object2/RawHTML/i5901/Python_DOC_referPages.assign-expression-to-a-variable-and-execute-it.txt
<div class="post-text" itemprop="text">
<p>I would like to assign the following expression to a variable:</p>
<pre><code>textFormat = 'soup.find("div", {"class" : "article-entry text"}).text.replace(\'\n\', "")'
</code></pre>
<p>I am calling this code in another file using </p>
<pre><code>text = exec(textFormat)
</code></pre>
<p>Sadly I get the error message:</p>
<pre><code>   File "C:\Users\dadsad\documents\coding\dasdasd\functions.py", line 42, in loadAtom
    text = exec(textFormat)   File "&lt;string&gt;", line 1
    soup.find("div", {"class" : "article-entry text"}).text.replace('
                                                                    ^ SyntaxError: EOL while scanning string literal
</code></pre>
<p>Any ideas? Thanks! :)</p>
<p>Edit: Tried the suggestion, getting a None:
<a href="https://i.stack.imgur.com/eKYpz.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/eKYpz.png"/></a></p>
</div>
<div class="post-text" itemprop="text">
<p>I suspect you are suffering from backslashitis. You need one more slash before the <code>n</code>:</p>
<pre><code>textFormat = 'soup.find("div", {"class" : "article-entry text"}).text.replace(\'\\n\', "")'
</code></pre>
<p>But, instead of <code>exec</code>ing code this way, you might want expose a subroutine instead:</p>
<pre><code>def textFormat(soup):
    return soup.find("div", {"class" : "article-entry text"}).text.replace('\n', "")
</code></pre>
</div>
<span class="comment-copy">It will need to be <code>\\n</code></span>
<span class="comment-copy">If you <code>print(textFormat)</code> and actually look at the value you assigned, you'll have a pretty good idea yourself.</span>
<span class="comment-copy">The new line is interpreted and not passed to <code>exec</code>. That being said, <code>exec</code> and <code>eval</code> are antipatterns.</span>
<span class="comment-copy">Yes, <a href="https://docs.python.org/3/library/functions.html#exec" rel="nofollow noreferrer"><code>exec()</code></a> always returns <code>None</code>. Perhaps you meant to use <a href="https://docs.python.org/3/library/functions.html#eval" rel="nofollow noreferrer"><code>eval()</code></a> instead?</span>
<span class="comment-copy">Tried your solution and added a screenshot. Still getting an error --&gt; None</span>
<span class="comment-copy">@user2252633 Getting None is not an error.</span>
